2002-10-24  Morten Welinder  <terra@diku.dk>

	* src/search.c (search_replace_string): Avoid matching the empty
	string at the end of the source after we have done a replacement.
	(Replace ".*" by "42" in "0.988" should not yield two copies
	of the replacement.)

	* src/xml-io.c (xml_cell_set_array_expr): Create place-holders for
	unknown functions (that were presumably known when we saved the
	file in question).
	(xml_read_cell): Ditto.
	(xml_read_cell_copy): Ditto.
	(xml_read_names): Ditto.
	(xml_read_style): Ditto.

	* src/expr-name.c (gnm_named_expr_collection_check): Compare in a
	different order so purify doesn't misunderstand gcc's smart code.

	* src/expr.c (gnm_expr_eval): Debug default cases.
	(do_gnm_expr_unref): Ditto.

	* src/dependent.c (unlink_expr_dep): Ditto.
	* src/summary.c: Ditto.
	* src/mstyle.c (mstyle_hash): Ditto.
	(summary_item_free): Ditto.
	(summary_item_as_text): Ditto.
	(summary_item_copy): Ditto.

2002-10-23  Jody Goldberg <jody@gnome.org>

	* src/xml-io.c : disable GNM_EXPR_PARSE_UNKNOWN_NAMES_ARE_STRINGS
	  All we really needed was simple value matching before
	  stringification.

	* src/xml-io.c (cb_xml_write_name) : split out of.
	(xml_write_names) : here.  rewritten to handle the hashes.

2002-10-23  Morten Welinder  <terra@diku.dk>

	* src/func.c (functions_shutdown): Get rid of the global symbol
	table.

	* src/style.c (style_font_new_simple): Don't create a layout until
	we know we have a font.  Get rid of pango context for negative
	hash entries.
	(style_shutdown): Complain if we leak style font refs.

2002-10-23  Jody Goldberg <jody@gnome.org>

	* src/sheet-merge.c (sheet_merge_add) : improve warning.

	http://bugzilla.gnome.org/show_bug.cgi?id=96617
	* src/gnumeric-pane.c (cb_sheet_object_canvas_event) : Fully init
	  object drag here too.

	* src/workbook.c (workbook_foreach_cell_in_range) : fix.

	* src/position.c (rangeref_normalize) : fix.

	* src/validation.c (validation_eval) : don't unref the val expr too
	  early.
