@@ -115,6 +115,9 @@ sub import_file {
 	    s/\b(M_LN2|M_PI|M_PI_2|M_SQRT2|M_2PI)\b/$1gnum/g;
 	    s/([-+]?\d*\.(\d{10,})([eE][-+]?\d+)?)/GNUM_const\($1\)/g;
 
+	    # Fix constant quotients.
+	    s~([-+]?\d+\.\d*)(\s*/\s*)([-+e0-9.]+)~GNUM_const\($1\)$2$3~;
+
 	    # These are made static.
 	    s/^gnum_float\s+(pbeta_both|stirlerr|bd0|dpois_raw|chebyshev_eval|lgammacor|lbeta|pbeta_raw|dbinom_raw)/static gnum_float $1/;
 	    s/^int\s+(chebyshev_init)/static int $1/;
@@ -124,6 +127,7 @@ sub import_file {
 	    s/qnorm5/qnorm/g;
 
 	    s/\b(trunc|ftrunc)\b/floorgnum/g;
+	    s/\b(lgammafn|lgamma)\b/lgammagnum/g;
 
 	    # Somewhat risky.
 	    s/\%([-0-9.]*)([efgEFG])/\%$1\" GNUM_FORMAT_$2 \"/g;
