@@ -1,3 +1,7 @@
+2002-10-24  Morten Welinder  <terra@diku.dk>
+
+	* ms-excel-read.c (excel_read_XCT): Fix typo, I think.
+
 2002-10-21  Jody Goldberg <jody@gnome.org>
 
 	* ms-formula-read.c (excel_parse_formula) : Ok. take a 2nd crack at
